<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:gravity="center"
	android:orientation="vertical"
	android:background="#FFFFFF">
	<FrameLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
		android:layout_gravity="center"
		android:gravity="center"        
	    android:orientation="vertical"
	    android:background="#FFFFFF">
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:orientation="vertical"
		    android:background="#FFFFFF">
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"	    
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:orientation="horizontal"
			    android:background="#FFFFFF">	
			    <TextView
			        android:layout_weight="0.33"
			    	android:layout_width="0dip"
			    	android:layout_height="wrap_content"      
			    	android:layout_marginTop="30dip"  
			    	android:layout_gravity="center"
			    	android:gravity="center"
			        android:textColor="#555555"
			        android:textSize="18sp"
			       	/>		       
			    <TextView	        
			        android:id="@+id/skip_this_step"
			        android:layout_weight="0.67"
			    	android:layout_width="0dip"
			    	android:layout_height="wrap_content"      
			    	android:layout_gravity="center_vertical|right"
			    	android:gravity="center_vertical|right"
			        android:textColor="#555555"
			        android:textSize="18sp"
			        android:text="@string/skip_this_step"
			        android:paddingTop="20dip"
			       	/>			            		        
			    <TextView
			        android:layout_weight="0.33"		        
			    	android:layout_width="0dip"
			    	android:layout_height="wrap_content"      
			    	android:layout_marginTop="30dip"  
			    	android:layout_gravity="center"
			    	android:gravity="center"
			        android:textColor="#555555"
			        android:textSize="18sp"
			       	/>			    
		    </LinearLayout>
        		        			    
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:layout_marginBottom="30dip"
		    	android:layout_gravity="center"
		    	android:gravity="center"        
		        android:src="@drawable/nag3"
		        />
		    
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"	    
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:orientation="horizontal"
			    android:background="#FFFFFF">	
			    <TextView
			        android:layout_weight="0.33"
			    	android:layout_width="0dip"
			    	android:layout_height="wrap_content"      
			    	android:layout_marginTop="30dip"  
			    	android:layout_gravity="center"
			    	android:gravity="center"
			        android:textColor="#555555"
			        android:textSize="18sp"
			       	/>		       
			    <LinearLayout
				    android:layout_weight="0.67"		        
				    android:layout_width="0dip"
				    android:layout_height="wrap_content"		    
				    android:layout_gravity="center"
				    android:gravity="center"
				    android:orientation="vertical">			       	 
				    <TextView	        
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"      
				    	android:layout_gravity="center"
				    	android:gravity="center"
				        android:textColor="#555555"
				        android:textSize="18sp"
				        android:text="@string/nag3"
				        android:paddingBottom="20dip"
				       	/>
				    <com.facebook.widget.LoginButton
				        xmlns:fb="http://schemas.android.com/apk/res-auto"
				        android:id="@+id/nag3_fblogin"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"        
				        android:layout_gravity="center"	        
				        fb:fetch_user_info="false"
			        	fb:login_text="@string/fb_btn_login"
			  			fb:logout_text="@string/fb_btn_logout"			        				        
				        /> 		
				    <TextView	        
				        android:id="@+id/nag3_sign_up"
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"      
				    	android:layout_gravity="center"
				    	android:gravity="center"
				        android:textColor="#555555"
				        android:textSize="18sp"
				        android:text="@string/su_sign_up_with_email"
				        android:paddingTop="20dip"
				       	/>			            		        
		        </LinearLayout>
			    <TextView
			        android:layout_weight="0.33"		        
			    	android:layout_width="0dip"
			    	android:layout_height="wrap_content"      
			    	android:layout_marginTop="30dip"  
			    	android:layout_gravity="center"
			    	android:gravity="center"
			        android:textColor="#555555"
			        android:textSize="18sp"
			       	/>			    
		    </LinearLayout>
		        
		</LinearLayout>
	</FrameLayout>
</LinearLayout>	