<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   	android:orientation="vertical">		    
        <com.facebook.widget.LoginButton
	        xmlns:fb="http://schemas.android.com/apk/res-auto"
	        android:id="@+id/fblogin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
		    android:layout_marginLeft="30dip"
		    android:layout_marginRight="30dip"				        
	        android:layout_marginTop="30dp"
	        fb:fetch_user_info="false"
        	fb:login_text="@string/fb_btn_login"
  			fb:logout_text="@string/fb_btn_logout"			        
			android:nextFocusDown="@+id/sign_in_email"					        
			android:nextFocusForward="@+id/sign_in_email"					        
	        />  
		<TextView    		     
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_gravity="center"
			android:layout_marginTop="20dip"
			android:layout_marginBottom="6dip"
			android:gravity="center"
			android:textSize="12sp"
			android:textColor="#999999"
			android:text="@string/or_log_in_with_email"		
			android:paddingLeft="8sp"
			android:paddingRight="8sp"	
			android:textAllCaps="true"						
			/>			        
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="1px"		    
		    android:orientation="horizontal"
		    android:background="#999999"
		    />				         		    
		<LinearLayout
			android:id="@+id/sign_in_email_container"
			android:tag="editcontainer"								        
		    android:layout_width="match_parent"
		    android:layout_height="50dip"
		    android:layout_marginLeft="12dip"
		    android:layout_marginRight="12dip"	
		    android:layout_marginTop="3dip"	 
		    android:layout_marginBottom="3dip"	 	    
			android:layout_gravity="left|center_vertical"
			android:gravity="left|center_vertical"	       
		    android:orientation="horizontal">
		    <LinearLayout
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"	
			    android:layout_weight="0.50"    
			    android:orientation="horizontal">	   	
				<ImageView					    	    
					android:layout_width="22dip"
					android:layout_height="22dip"	
					android:layout_marginLeft="20dip"
					android:layout_marginRight="8dip"
					android:layout_gravity="left|center_vertical"
					android:src="@drawable/icon_setting_account"	
					android:focusable="true"	
					android:adjustViewBounds="true"
					android:scaleType="fitXY"					
					/>
				<TextView    		     
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_gravity="left|center_vertical"
					android:gravity="left|center_vertical"
					android:textSize="18sp"
					android:textColor="#000000"
					android:text="@string/tlogin_your_email"		
					android:paddingLeft="8sp"
					android:paddingRight="8sp"	
					/>		
			</LinearLayout>				   		
			<EditText
			    android:id="@+id/sign_in_email"
			    android:tag="editable"	        
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.50"
				android:layout_gravity="left|center_vertical"			
				android:gravity="left|center_vertical"
				android:textSize="18sp"
				android:textColor="#242424"					
				android:textColorHint="#242424"														
				android:paddingLeft="3sp"			
				android:singleLine="true"
				android:cursorVisible="true"
				android:textCursorDrawable="@null"			
    			android:inputType="textEmailAddress"						
				android:background="@drawable/textfield_tray"
				android:nextFocusDown="@+id/sign_in_password"									
				android:nextFocusForward="@+id/sign_in_password"								
				/>											    
		</LinearLayout>  										
	    <LinearLayout
			android:id="@+id/sign_in_password_container"
			android:tag="editcontainer"								        
		    android:layout_width="match_parent"
		    android:layout_height="50dip"
		    android:layout_marginLeft="12dip"
		    android:layout_marginRight="12dip"	
		    android:layout_marginTop="3dip"	 
		    android:layout_marginBottom="3dip"	 	    
			android:layout_gravity="left|center_vertical"
			android:gravity="left|center_vertical"	       
		    android:orientation="horizontal">
		    <LinearLayout
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"	
			    android:layout_weight="0.50"    
			    android:orientation="horizontal">	   	
				<ImageView					    	    
					android:layout_width="22dip"
					android:layout_height="22dip"	
					android:layout_marginLeft="20dip"
					android:layout_marginRight="8dip"
					android:layout_gravity="left|center_vertical"
					android:src="@drawable/icon_login_password"	
					android:focusable="true"	
					android:adjustViewBounds="true"
					android:scaleType="fitXY"													
					/>
				<TextView    		     
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_gravity="left|center_vertical"
					android:gravity="left|center_vertical"
					android:textSize="18sp"
					android:textColor="#000000"
					android:text="@string/pw_hint_password"		
					android:paddingLeft="8sp"
					android:paddingRight="8sp"	
					/>		
			</LinearLayout>				   		
			<EditText
			    android:id="@+id/sign_in_password"     
				android:tag="editable"	 				      
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="0.50"
				android:layout_gravity="left|center_vertical"			
				android:gravity="left|center_vertical"
				android:textSize="18sp"
				android:textColor="#242424"					
				android:textColorHint="#242424"														
				android:paddingLeft="3sp"			
				android:singleLine="true"
				android:cursorVisible="true"
				android:textCursorDrawable="@null"		
				android:password="true"		
				android:background="@drawable/textfield_tray"
				android:nextFocusDown="@+id/sign_in_button"									
				android:nextFocusForward="@+id/sign_in_button"								
				/>											    
		</LinearLayout>    
					
	    <Button     
	        android:id="@+id/sign_in_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    android:layout_marginLeft="30dip"
		    android:layout_marginRight="30dip"
		    android:layout_marginTop="20dip"						
			android:layout_marginBottom="20dip"
			android:layout_gravity="bottom|center_horizontal"
			android:textSize="16sp"
			android:textColor="#FFFFFF"
			android:text="@string/log_in_with_email"
			android:background="#FFAA00"
			android:nextFocusDown="@+id/sign_in_button"							
			android:nextFocusForward="@+id/sign_in_button"									
			/>				    
	</LinearLayout>
</ScrollView> 