<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:gravity="center"
	android:orientation="vertical"
	android:background="#FFFFFF">	
	<FrameLayout	    
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
		android:layout_gravity="center"
		android:gravity="center"        
	    android:orientation="vertical"
	    android:background="#FFFFFF">
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:orientation="vertical"
		    android:background="#FFFFFF">
		    
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:layout_marginLeft="50dip"
		        android:layout_marginRight="50dip"		      
		    	android:layout_gravity="center"
		    	android:gravity="center"        
		        android:src="@drawable/nag2"
		        android:adjustViewBounds="true"
		        android:scaleType="centerInside"
		        />
		    
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"	    
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:orientation="horizontal"
			    android:background="#FFFFFF">	
			    <TextView
			        android:layout_weight="0.15"
			    	android:layout_width="0dip"
			    	android:layout_height="wrap_content"      
			    	android:layout_marginTop="30dip"  
			    	android:layout_gravity="center"
			    	android:gravity="center"
			        android:textColor="#555555"
			        android:textSize="18sp"
			       	/>		       
			    <LinearLayout
				    android:layout_weight="0.70"		        
				    android:layout_width="0dip"
				    android:layout_height="wrap_content"		    
				    android:layout_gravity="center"
				    android:gravity="center"
				    android:orientation="vertical">			       	 
				    <TextView	        
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"      
				    	android:layout_gravity="center"
				    	android:gravity="center"
				        android:textColor="#555555"
				        android:textSize="18sp"
				        android:text="@string/nag2"
				        android:paddingBottom="20dip"
				       	/>
				    <com.facebook.widget.LoginButton
				        xmlns:fb="http://schemas.android.com/apk/res-auto"
				        android:id="@+id/nag2_fblogin"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"        
				        android:layout_gravity="center"	        
				        fb:fetch_user_info="false"
			        	fb:login_text="@string/fb_btn_login"
			  			fb:logout_text="@string/fb_btn_logout"			        				        
				        /> 		    
		        </LinearLayout>
			    <TextView
			        android:layout_weight="0.15"		        
			    	android:layout_width="0dip"
			    	android:layout_height="wrap_content"      
			    	android:layout_marginTop="30dip"  
			    	android:layout_gravity="center"
			    	android:gravity="center"
			        android:textColor="#555555"
			        android:textSize="18sp"
			       	/>			    
		    </LinearLayout> 
		
		</LinearLayout>
	</FrameLayout>
</LinearLayout>