<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feedback_radio_phone"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
   	android:orientation="horizontal">		
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dip"
	   	android:orientation="vertical">	   	
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dip"
		   	android:orientation="horizontal">	  	   	
		    <LinearLayout
		        android:id="@+id/feedback_radio_contact"
		        android:layout_weight="1"			        
			    android:layout_width="0dip"
			    android:layout_height="fill_parent"
			   	android:orientation="horizontal">				   	
		        <ImageView
		        	android:id="@+id/feedback_radio_contact_image"				                
			        android:layout_width="27dip"
			        android:layout_height="27dip"	        
			        android:src="@drawable/btn_radio_on"
			        android:adjustViewBounds="true"
			        android:scaleType="fitXY"
			        />	 			
				<TextView     
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_marginLeft="6dip"									
					android:textSize="18sp"
					android:textColor="#999999"
					android:text="@string/contact_us"					
					/>					   				   	
			</LinearLayout>   
		    <LinearLayout
		        android:id="@+id/feedback_radio_bug"
		        android:layout_weight="1"			        
			    android:layout_width="0dip"
			    android:layout_height="fill_parent"
			   	android:orientation="horizontal">		
		        <ImageView
		            android:id="@+id/feedback_radio_bug_image"		
			        android:layout_width="27dip"
			        android:layout_height="27dip"
			        android:src="@drawable/btn_radio_off"
			        android:adjustViewBounds="true"
			        android:scaleType="fitXY"
			        />					   	
			   	<TextView     
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_marginLeft="6dip"						
					android:textSize="18sp"
					android:textColor="#999999"
					android:text="@string/bug"					
					/>	
		   	</LinearLayout>  
	   	</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dip"
		   	android:orientation="horizontal">	 	   	
		    <LinearLayout
		        android:id="@+id/feedback_radio_suggestion"
		        android:layout_weight="1"
			    android:layout_width="0dip"
			    android:layout_height="wrap_content"
			   	android:orientation="horizontal">
		        <ImageView
		        	android:id="@+id/feedback_radio_suggestion_image"		                
			        android:layout_width="27dip"
			        android:layout_height="27dip"
			        android:src="@drawable/btn_radio_off"
			        android:adjustViewBounds="true"
			        android:scaleType="fitXY"
			        />					   	
				<TextView     
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_marginLeft="6dip"
					android:textSize="18sp"
					android:textColor="#999999"
					android:text="@string/suggestion"					
					/>					   							   	
		    </LinearLayout>
		    <LinearLayout
		        android:id="@+id/feedback_radio_null"
		        android:layout_weight="1"
			    android:layout_width="0dip"
			    android:layout_height="fill_parent"
			   	android:orientation="horizontal"
			   	android:visibility="invisible">
		        <ImageView
		        	android:id="@+id/feedback_radio_null_image"		                
			        android:layout_width="27dip"
			        android:layout_height="27dip"
			        android:src="@drawable/btn_radio_off"
			        android:adjustViewBounds="true"
			        android:scaleType="fitXY"
			        />					   	
				<TextView     
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_marginLeft="6dip"
					android:textSize="18sp"
					android:textColor="#999999"			
					/>					   							   	
		    </LinearLayout>	    
	    </LinearLayout>
    </LinearLayout>  			    			    			   					   	
</LinearLayout>            